tests/cn/implies3.broken.c
int foo ()
/*@ requires true implies false;
    ensures false;
@*/
{
    return 0;
}